--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "version": 2,
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "api/$1.js" },
-    { "src": "/(.*)", "dest": "/$1.html" }
-  ]
+  "version": 2
 }
