--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,13 @@
       "runtime": "nodejs18.x"
     }
   },
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "*.html", "use": "@vercel/static" }
+  ],
   "routes": [
     { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
-    { "src": "/(.*)", "dest": "/$1.html" }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
