--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     { "src": "*.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
+    { "src": "^/api/(.*)$", "dest": "api/$1.js" },
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
   ]
